Fix ace-editor cursor alignment bug

--- a/app/stylesheets/builtin-pages/components/file-editor.less
+++ b/app/stylesheets/builtin-pages/components/file-editor.less
@@ -13,7 +13,3 @@
   padding-top: 5px;
   line-height: 1.5;
 }
-
-.ace-tm .ace_content {
-  font-size: 12.25px;
-}
